src/test/resources/tokens/invalid/integer_out_of_bounds_negative_octal.unpick
unpick v3
const int
    0 = -020000000001